Lab-storage/tutum-full.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: tutum-deployment
  labels:
    app: tutum
spec:
  # RS config goes here
  replicas: 3
  selector:
    matchLabels:
      app: tutum
  template:
    metadata:
      labels:
        app: tutum

    spec:
      containers:
      - name: tutum
        image: tutum/hello-world
        ports:
        - containerPort: 80
